Enemy added
Created a test squirrel and map layer for spawning enemies